--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,36 @@
   color: #61dafb;
 }
 
+
+.div1{
+  height: 80px;
+  background-color: #61dafb;
+  text-align: center;
+  margin-top: -20px;
+}
+.div1 h1{
+  color: white;
+}
+
+.div2{
+  height: 80px;
+  background-color: rosybrown;
+  text-align: center;
+  margin-top: -20px;
+}
+
+body{
+  background-color: #282c34;
+}
+
+
+.div3{
+  height: 80px;
+  background-color: #61dafb;
+  text-align: center;
+  margin-top: -20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +66,4 @@
     transform: rotate(360deg);
   }
 }
+
